--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,11 +8,20 @@
   margin: 0;
 }
 
+@layer base {
+  input[type='number']::-webkit-inner-spin-button,
+  input[type='number']::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
+
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
+  background: #f9fcfd;
 }
 
 a {
